# natural-language-builder

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  bridge_results.json  nlb-ui.service  pyproject.toml
examples/: cable_stayed.txt  i39_kishwaukee.txt  simple_prestressed.txt
nlb-final/: results.json
nlb-memphis/: results.json
nlb-memphis2/: results.json
nlb-memphis3/: results.json
nlb-memphis4/: executive-summary.md  red-team-report.md  results.json
nlb-memphis5/: results.json
nlb-memphis6/: results.json
nlb-memphis7/: moment-diagram.html  results.json
nlb-output/: results.json
nlb-output2/: red-team-report.md  results.json
nlb-output3/: results.json
nlb-run-3455e217/: moment-diagram.html
nlb-run-52fe1499/: moment-diagram.html  results.json
nlb-run-6dd0c214/: moment-diagram.html  results.json
nlb-run-d200cf02/: moment-diagram.html  red-team-report.md  results.json
src/nlb/: __init__.py  cli.py  mcp_server.py
src/nlb/data/: failures.json
src/nlb/opensees/: __init__.py  analysis.py  elements.py  materials.py  sections.py
src/nlb/tools/: assembler.py  bearings.py  distribution_factors.py  foundation.py  load_envelope.py  (+7 more)
tests/: test_assembler.py  test_distribution_factors.py  test_foundation.py  test_load_envelope.py  test_loads.py  test_moving_loads.py  test_opensees_core.py  test_red_team_report.py  test_site_recon.py  test_substructure_bearings.py  test_superstructure.py
ui/: BUILD_SPEC.md  README.md  run_manager.py  server.py  start.sh  test_integration.py
ui/static/: index.html
ui/templates/: moment-diagram-template.html
(+1 files in other folders)
