[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-language-builder"
version = "0.1.0"
description = "Natural language → nonlinear FEA → adversarial bridge analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael Martello", email = "michael.commack@gmail.com"},
]
keywords = ["bridge", "engineering", "opensees", "FEA", "MCP", "AI"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "openseespy>=3.5.0",
    "numpy>=1.24",
    "requests>=2.28",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
viz = [
    "weasyprint>=60.0",
    "matplotlib>=3.7",
]

[project.scripts]
nlb = "nlb.cli:main"

[project.urls]
Homepage = "https://github.com/mjamiv/natural-language-builder"
Repository = "https://github.com/mjamiv/natural-language-builder"
Issues = "https://github.com/mjamiv/natural-language-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
